--- a/Models/TTS3_Vocoder/2024.09.03_Vec2Wav2.0.md
+++ b/Models/TTS3_Vocoder/2024.09.03_Vec2Wav2.0.md
@@ -49,7 +49,7 @@
 
 > We propose a new speech discrete token vocoder, ***vec2wav 2.0***, which advances voice conversion (VC).
 > We use discrete tokens from speech self-supervised models as the content features of source speech, and treat VC as a prompted vocoding task.
-> To amend the loss of speaker timbre in the content tokens, ***vec2wav 2.0*** utilizes the WavLM features to provide strong timbre-dependent information.
+> To amend the loss of speaker timbre in the content tokens, ***vec2wav 2.0*** utilizes the [WavLM](../Speech_Representaion/2021.10.26_WavLM.md) features to provide strong timbre-dependent information.
 > A novel adaptive Snake activation function is proposed to better incorporate timbre into the waveform reconstruction process.
 > In this way, ***vec2wav 2.0*** learns to alter the speaker timbre appropriately given different reference prompts.
 > Also, no supervised data is required for ***vec2wav 2.0*** to be effectively trained.
@@ -60,28 +60,28 @@
 
 ## 1.Introduction: 引言
 
-> Discretizing speech into `tokens` has prevailed in speech generative tasks, such as text-to-speech (TTS)~\cite{VQTTS,valle,du2024unicats,facodec}, in the era of large language models (LLMs). 
+> Discretizing speech into `tokens` has prevailed in speech generative tasks, such as text-to-speech (TTS) (VQTTS; [VALL-E [2]](../Speech_LLM/2023.01.05_VALL-E.md); [UniCATS [3]](../_tmp/UniCATS.md); [FACodec [4]](../Speech_Neural_Codec/2024.03.05_FACodec.md)), in the era of large language models (LLMs). 
 > However, the potential of discrete speech tokens in voice conversion (VC) has not been fully mined, which typically aims to convert source speech into target timbre from reference speech.
 > Speech discrete tokens can be roughly divided into acoustic tokens and semantic tokens~\cite{yang2024towards}.
-> Although acoustic tokens~\cite{encodec,kumar2024high} reconstruct speech signals well, they lack the ability of VC because all aspects of information in speech are mixed and retained together. 
-> Semantic tokens usually come from speech self-supervised (SSL) models~\cite{vq-wav2vec,hsu2021hubert,baevski2020wav2vec,chen2022wavlm} that emphasize on content-related information.
+> Although acoustic tokens ([EnCodec [6]](../Speech_Neural_Codec/2022.10.24_EnCodec.md); [DAC [7]](../Speech_Neural_Codec/2023.06.11_Descript-Audio-Codec.md)) reconstruct speech signals well, they lack the ability of VC because all aspects of information in speech are mixed and retained together. 
+> Semantic tokens usually come from speech self-supervised (SSL) models ([VQ-Wav2Vec [8]](../Speech_Representaion/2019.10.12_VQ-Wav2Vec.md); [HuBERT [9]](../Speech_Representaion/2021.06.14_HuBERT.md); [Wav2Vec 2.0 [10]](../Speech_Representaion/2020.06.20_Wav2Vec2.0.md); [WavLM [11]](../Speech_Representaion/2021.10.26_WavLM.md)) that emphasize on content-related information.
 > Whether timbre is intentionally or unintentionally removed in these tokens, they can act as content representations and thus be utilized in the recognition-synthesis VC paradigm~\cite{huang2022s3prl}.
 >
 > Throughout the history, VC methods with a continuous feature space have been researched with depth.
 > The AutoVC series of work~\cite{qian2019autovc,qian2020unsupervised,chan2022speechsplit2} attempt to decouple speech attributes via autoencoder bottlenecks.
-> VC with advanced generative algorithms has then achieved remarkable results, such as normalizing flows~\cite{casanova2022yourtts,merritt2022text,li2023freevc} and diffusion models~\cite{diffvc, choi2023diff,choi2024dddm}.
+> VC with advanced generative algorithms has then achieved remarkable results, such as normalizing flows ([YourTTS [16]](../E2E/2021.12.04_YourTTS.md); merritt2022text,li2023freevc) and diffusion models (diffvc, choi2023diff,choi2024dddm).
 > After the rise of speech SSL methods, researchers begin to apply SSL features in VC ~\cite{huang2022s3prl,hussain2023ace,knnvc,neekhara2023selfvc} where the rich phonetic content information from SSL features are utilized.
 >
 > But continuous features make it hard to integrate VC with LLMs and thus an isolated step with other speech-related tasks.
 > Discrete speech tokens can serve as content representations, so VC can be treated as a speech re-synthesis task then~\cite{polyak21}.
 > Starting from \cite{polyak21}, discrete SSL features are increasingly investigated in VC for keeping phonetic content while discarding most of the acoustic details, such as UUVC~\cite{uuvc} and Vec-Tok-VC+~\cite{vectokvc+}.
 > ContentVec~\cite{qian2022contentvec} introduces speaker disentanglement to SSL features that benefit VC.
-> There also exist researches on decoupled speech codecs that also facilitate VC, such as SSVC~\cite{SSVC} and FACodec~\cite{facodec}.
+> There also exist researches on decoupled speech codecs that also facilitate VC, such as SSVC~\cite{SSVC} and [FACodec [4]](../Speech_Neural_Codec/2024.03.05_FACodec.md).
 > Nevertheless, the performance of those VC methods is still limited compared to continuous state-of-the-arts.
 > Also, excessive design of speaker disentanglement in the discrete tokens may lead to a negative impact on other paralinguistic information that needs to be preserved, such as prosody.
 > 
 > Instead of pursuing perfect disentanglement in tokens, a different approach is to enhance the timbre controllability in discrete token vocoders.
-> A typical instance is the idea of `prompted vocoders` proposed by CTX-vec2wav~\cite{du2024unicats} which is later verified in VC~\cite{li2024sef}.
+> A typical instance is the idea of `prompted vocoders` proposed by CTX-vec2wav ([UniCATS [3]](../_tmp/UniCATS.md)) which is later verified in VC~\cite{li2024sef}.
 > In CTX-vec2wav, timbre information is injected using a reference prompt.
 > By its position-agnostic cross-attention mechanism, timbre in the mel-spectrogram prompts can be effectively incorporated into the process of speech re-synthesis than only using a time-invariant speaker embedding vector~\cite{li2024sef}. 
 > This indicates the larger potential of performing VC through discrete token vocoders.
@@ -108,13 +108,13 @@ Furthermore, though only trained on English corpus, ***vec2wav 2.0*** shows rema
 ### 3.1.System Overview: 系统概览
 
 > We design ***vec2wav 2.0*** to be a prompted discrete token vocoder as shown in Fig.\ref{fig:main}.
-> The overall architecture inherits the frontend-generator framework of CTX-vec2wav~\cite{du2024unicats}, where the input discrete speech tokens are first fed to a Conformer-based frontend module to soften the discreteness, before a vocoder generator that finally outputs the realistic waveforms.
+> The overall architecture inherits the frontend-generator framework of CTX-vec2wav ([UniCATS [3]](../_tmp/UniCATS.md)), where the input discrete speech tokens are first fed to a Conformer-based frontend module to soften the discreteness, before a vocoder generator that finally outputs the realistic waveforms.
 > The acoustic prompt brings sufficient timbre information into the process of speech re-synthesis.
-> We first extract prompt embeddings through a pretrained WavLM model, then use a CNN pre-net to process the hidden embeddings.
-> In the frontend module, the prompt embeddings are utilized by the position-agnostic cross-attention mechanism~\cite{du2024unicats,li2024sef}, which does not apply positional encoding to the query sequence.
+> We first extract prompt embeddings through a pretrained [WavLM](../Speech_Representaion/2021.10.26_WavLM.md) model, then use a CNN pre-net to process the hidden embeddings.
+> In the frontend module, the prompt embeddings are utilized by the position-agnostic cross-attention mechanism~\cite{[UniCATS [3]](../_tmp/UniCATS.md); li2024sef}, which does not apply positional encoding to the query sequence.
 > This special cross attention mechanism simulates shuffling the query sequence and inherently breaks the local patterns in the reference prompt, e.g. linguistic and prosodic features, which enables more accurate learning of target timbre as some global information.
 >
-> After timbre is preliminarily merged into the frontend, we design an adaptive BigVGAN~\cite{lee2023bigvgan} generator to further incorporate the timbre embedding in waveform generation. 
+> After timbre is preliminarily merged into the frontend, we design an adaptive [BigVGAN [31]](2022.06.09_BigVGAN.md) generator to further incorporate the timbre embedding in waveform generation. 
 > The core component of this adaptive generator is a novel adaptive Snake activation function, which will be illustrated in Section \ref{sec:snake}.
 
 ### 3.2.Adaptive Snake Activation: 自适应蛇形激活函数
@@ -139,7 +139,7 @@ $$
 > Fig.\ref{fig:bigvgan-detail} illustrates the detailed architecture of adaptive BigVGAN generator.
 > The input hidden states are iteratively upsampled by transposed convolutions and transformed by anti-aliased multi-periodicity composition (AMP) blocks. 
 > Each AMP block receives an additional prompt embedding that is fed to the adaptive Snake activation layer for timbre control.
-> Low-pass (LP) filters are applied after each upsampling and downsampling operation to prevent aliasing~\cite{lee2023bigvgan}.
+> Low-pass (LP) filters are applied after each upsampling and downsampling operation to prevent aliasing ([BigVGAN [31]](2022.06.09_BigVGAN.md)).
 > The hidden states are recovered to sampling points after a final adaptive Snake and convolution block. 
 
 ### 3.3.Content and Prompt Features
@@ -149,28 +149,28 @@ $$
 
 #### Content Features
 
-> We use the off-the-shelf vq-wav2vec~\cite{vq-wav2vec} SSL model for extracting the discrete content representation to be re-synthesized.
+> We use the off-the-shelf [VQ-Wav2Vec [8]](../Speech_Representaion/2019.10.12_VQ-Wav2Vec.md) SSL model for extracting the discrete content representation to be re-synthesized.
 > The discrete tokens are extracted from the quantizer output before the feature aggregator, which is a two-group integer index sequence. 
 > We favor this representation because a lot of speaker timbre information is removed due to the information bottleneck, while most of the phonetic pronunciation and prosody are retained~\cite{DSETTS}.
-> Also, compared to HuBERT~\cite{hsu2021hubert}-style Transformer SSL models, vq-wav2vec is free of manual clustering and is also fully convolutional with a certain receptive field.
+> Also, compared to [HuBERT [9]](../Speech_Representaion/2021.06.14_HuBERT.md)-style Transformer SSL models, [VQ-Wav2Vec](../Speech_Representaion/2019.10.12_VQ-Wav2Vec.md) is free of manual clustering and is also fully convolutional with a certain receptive field.
 > This produces a representation that is unaware of the total sequence length, keeping consistent results for a given window.
 > This consistency also shows potential for cross-lingual conversion, as its language-agnostic property has been successfully applied in multilingual TTS~\cite{limmits23}.
 > Although there exists measurable speaker timbre leakage in the discrete tokens~\cite{superb,TNVQTTS,DSETTS}, the ***vec2wav 2.0*** vocoder exhibits strong timbre controllability, so that competitive VC can still be achieved.
 
 #### Prompt Features
 
-> Following CTX-vec2wav, the reference prompt segment is randomly cut from the current utterance, to maintain the same speaker identity without labeled data. Instead of using mel-spectrogram to provide timbre information from the reference prompt, we use a pretrained WavLM~\cite{chen2022wavlm} model as a timbre feature extractor owing to its widely-verified advantage on speaker verification~\cite{jung2024espnet,superb}. We freeze the WavLM model in training and only use the output feature at a certain location of its Transformer blocks.
-> In practice, we use the 6th layer of WavLM-Large model as early layers are proven to contain rich timbre information~\cite{knnvc}.
+> Following CTX-vec2wav, the reference prompt segment is randomly cut from the current utterance, to maintain the same speaker identity without labeled data. Instead of using mel-spectrogram to provide timbre information from the reference prompt, we use a pretrained [WavLM [11]](../Speech_Representaion/2021.10.26_WavLM.md) model as a timbre feature extractor owing to its widely-verified advantage on speaker verification~\cite{jung2024espnet,superb}. We freeze the [WavLM](../Speech_Representaion/2021.10.26_WavLM.md) model in training and only use the output feature at a certain location of its Transformer blocks.
+> In practice, we use the 6th layer of [WavLM](../Speech_Representaion/2021.10.26_WavLM.md)-Large model as early layers are proven to contain rich timbre information~\cite{knnvc}.
 
 ### 3.4.Discriminators and Training Criterion
 
-> We inherit the multi-scale discriminators (MSD) and multi-period discriminators (MPD) from HifiGAN~\cite{kong2020hifigan}. These discriminators are jointly trained with the generator to distinguish fake signals from real ones in multiple scales and periods. 
+> We inherit the multi-scale discriminators (MSD) and multi-period discriminators (MPD) from [HiFi-GAN [38]](2020.10.12_HiFi-GAN.md). These discriminators are jointly trained with the generator to distinguish fake signals from real ones in multiple scales and periods. 
 > With the generator adversarially trained to fool the discriminators, we achieve high-fidelity speech re-synthesis and VC results.
 > Different from some current VC models that often suffer from audio quality issues, ***vec2wav 2.0*** ensures the audio quality of speech signals by GAN training.
 >
-> The training criteria include the auxiliary mel prediction loss and all the other GAN losses from HifiGAN.
+> The training criteria include the auxiliary mel prediction loss and all the other GAN losses from [HiFi-GAN](2020.10.12_HiFi-GAN.md).
 > The auxiliary mel prediction loss is an L1 loss between the ground truth mel-spectrograms and predicted ones that come from linear projections after the Conformer frontend, to warm up the whole model.
-> This loss is added with a certain coefficient, and following vec2wav~\cite{VQTTS} and CTX-vec2wav~\cite{du2024unicats}, we cancel it after warming up.
+> This loss is added with a certain coefficient, and following vec2wav~\cite{VQTTS} and CTX-vec2wav ([UniCATS [3]](../_tmp/UniCATS.md)), we cancel it after warming up.
 
 ### 3.4.Any-to-Any Voice Conversion
 
@@ -181,7 +181,7 @@ $$
 >
 > Moreover, as both the cross attention mechanism and the adaptive Snake activation are position agnostic, the ordering of the prompt features plays minimal role in timbre control.
 > This allows cross-lingual VC where target speakers may come from unseen languages, since almost all linguistic-relevant patterns are broken by these position-agnostic operations.
-> As long as the global traits are apparent enough in the WavLM features, speaker timbre can be successfully transferred, even if the model is not trained on multilingual data.
+> As long as the global traits are apparent enough in the [WavLM](../Speech_Representaion/2021.10.26_WavLM.md) features, speaker timbre can be successfully transferred, even if the model is not trained on multilingual data.
 
 ## 4.Experiments: 实验
 
@@ -193,16 +193,16 @@ $$
 > The prompt segment is cut starting from a random point within 1 second of either the beginning or the end of an utterance, extending inward towards the middle, with its length randomly sampled between one third and one half of the original utterance's duration.
 > In this way, a reasonable range of prompt lengths is covered in training, and ***vec2wav 2.0*** learns to handle short reference lengths well.
 >
-> We use the k-means version of official vq-wav2vec model\footnote{\scriptsize\url{https://github.com/facebookresearch/fairseq/tree/main/examples/wav2vec}} to extract content tokens from source speech.
+> We use the k-means version of official [VQ-Wav2Vec](../Speech_Representaion/2019.10.12_VQ-Wav2Vec.md) model ([Github](https://github.com/facebookresearch/fairseq/tree/main/examples/wav2vec)) to extract content tokens from source speech.
 > As this model adopts grouped vector quantization, we concatenate the code-vectors corresponding to each group before feeding the Conformer frontend.
 > The input to the frontend is thus a 512-dimensional sequence in 10ms strides.
-> The prompt embeddings are extracted from official WavLM-Large\footnote{\scriptsize\url{https://github.com/microsoft/unilm/tree/master/wavlm}} at the 6th layer.
+> The prompt embeddings are extracted from official [WavLM](../Speech_Representaion/2021.10.26_WavLM.md)-Large ([Github](https://github.com/microsoft/unilm/tree/master/wavlm)) at the 6th layer.
 >
 > The Conformer frontend of ***vec2wav 2.0*** contains 2 Conformer blocks, where each of the self and cross attention modules has 2 heads and 184 attention dimensions.
 > The prompt prenet has four CNN blocks with scaled residual connections, where the hidden dimensions are 128, 256 and 512 before being fed to cross attentions.
 > The resulting generator model has 40.3M parameters.
 >
-> The whole model is trained for 1 million steps on 4 NVIDIA A10 GPUs with a maximum batch capacity of 36s speech data per device. Other hyper-parameters follow CTX-vec2wav~\cite{du2024unicats}.
+> The whole model is trained for 1 million steps on 4 NVIDIA A10 GPUs with a maximum batch capacity of 36s speech data per device. Other hyper-parameters follow CTX-vec2wav ([UniCATS [3]](../_tmp/UniCATS.md)).
 
 ### Evaluation
 
@@ -213,19 +213,19 @@ $$
 > To measure the performance of VC systems, we adopt multi-faceted metrics that contain both objective and subjective ones:
 > 1. Quality and intelligibility: We use the subjective naturalness MOS (NMOS) and word error rate (WER percentage) between recognized hypotheses and ground truth texts.
 > The NMOS tests require listeners to rate the utterances by quality and naturalness ranging from 1 to 5.
-> WERs are computed using NeMo ASR\footnote{\scriptsize\url{https://huggingface.co/nvidia/stt_en_fastConformer_transducer_large}}.
+> WERs are computed using NeMo ASR ([HuggingFace](https://huggingface.co/nvidia/stt_en_fastConformer_transducer_large)).
 > 2. Speaker similarity: We conduct similarity MOS (SMOS) tests and compute speaker embedding cosine similarity (SECS).
 > Listeners in SMOS tests are asked to rate timbre similarity between reference and synthesized items in 1-5 scale.
-> SECS is computed via Resemblyzer\footnote{\scriptsize\url{https://github.com/resemble-ai/Resemblyzer}} where speaker embeddings are extracted by a verification model for computing cosine similarity in range of -1 to 1.
+> SECS is computed via Resemblyzer ([Github](https://github.com/resemble-ai/Resemblyzer)) where speaker embeddings are extracted by a verification model for computing cosine similarity in range of -1 to 1.
 > 3. Prosody preservation: We additionally measure the correlation coefficient of pitch contours (P.Corr) between the source speech and converted speech.
 > This is also an important metric in VC because ideal VC systems should preserve prosodic variations in source speech while transferring timbre attributes.
 > The value range is -1 to 1, with higher values indicating better preservation.
 >
 > We compare ***vec2wav 2.0*** with some famous VC models. 
-> YourTTS~\cite{casanova2022yourtts} is a famous flow-based end-to-end VC model.
+> [YourTTS [16]](../E2E/2021.12.04_YourTTS.md) is a famous flow-based end-to-end VC model.
 > DiffVC~\cite{diffvc} and Diff-HierVC~\cite{choi2023diff} promote convertibility via diffusion models.
 > UUVC~\cite{uuvc} also performs VC by discrete token reconstruction, but incorporates HuBERT tokens and additional prosody predictions.
-> FACodec~\cite{facodec} is a state-of-the-art speech codec based on supervised decoupling of content, prosody, timbre and detail information.
+> [FACodec [4]](../Speech_Neural_Codec/2024.03.05_FACodec.md) is a state-of-the-art speech codec based on supervised decoupling of content, prosody, timbre and detail information.
 > FACodec is capable of converting voices by simply replacing the speaker embedding into the target speaker and then decoding into waveform.
 > We discard the detail tokens in FACodec for VC since we find these tokens still contain considerable speaker information that harms VC performance.
 > We use the official implementation and checkpoints for all baselines.
@@ -240,7 +240,7 @@ $$
 > It is thus clear that ***vec2wav 2.0*** achieves significantly better synthesis quality and speaker similarity than all the baselines.
 > The pitch correlation of ***vec2wav 2.0*** is also at a high level\footnote{ Note that pitch correlation is less meaningful if speaker similarity is low.}.
 > The WER of ***vec2wav 2.0*** is still acceptable although not the best. 
-> This is mostly due to the quantization errors that occur in the vq-wav2vec model itself.
+> This is mostly due to the quantization errors that occur in the [VQ-Wav2Vec](../Speech_Representaion/2019.10.12_VQ-Wav2Vec.md) model itself.
 
 ### Cross-Lingual Any-to-Any VC
 
@@ -257,16 +257,16 @@ $$
 ### Ablation Study
 
 > We also conduct ablation studies on different input SSL discrete tokens and vocoder architectures.
-> Apart from vq-wav2vec, we train CTX-vec2wav (our predecessor) and ***vec2wav 2.0*** on HuBERT tokens and wav2vec 2.0~\cite{baevski2020wav2vec} tokens.
+> Apart from [VQ-Wav2Vec](../Speech_Representaion/2019.10.12_VQ-Wav2Vec.md), we train CTX-vec2wav (our predecessor) and ***vec2wav 2.0*** on HuBERT tokens and [Wav2Vec 2.0 [10]](../Speech_Representaion/2020.06.20_Wav2Vec2.0.md) tokens.
 > The HuBERT tokens are obtained by 2048-centroid clustering on the output of the last layer.
-> The wav2vec 2.0 tokens are considered the quantizer output before the Transformer, with 2 codebook groups each with 320 codes.
+> The [Wav2Vec 2.0](../Speech_Representaion/2020.06.20_Wav2Vec2.0.md) tokens are considered the quantizer output before the Transformer, with 2 codebook groups each with 320 codes.
 >
-> To compare architectures, we additionally train two variants of ***vec2wav 2.0*** on vq-wav2vec inputs: ***vec2wav 2.0-ab1*** that replaces the adaptive Snake activations in BigVGAN by the original Snakes; and ***vec2wav 2.0-ab2*** that further replaces BigVGAN with HifiGAN.
-> Thus the comparison between vec2wav2.0 and `ab1` indicates the effect of adaptive Snake activation, while that between CTX-vec2wav and `ab2` shows the difference made by prompt feature and modules.
+> To compare architectures, we additionally train two variants of ***vec2wav 2.0*** on [VQ-Wav2Vec](../Speech_Representaion/2019.10.12_VQ-Wav2Vec.md) inputs: ***vec2wav 2.0-ab1*** that replaces the adaptive Snake activations in BigVGAN by the original Snakes; and ***vec2wav 2.0-ab2*** that further replaces BigVGAN with [HiFi-GAN](2020.10.12_HiFi-GAN.md).
+> Thus the comparison between ***vec2wav 2.0*** and `ab1` indicates the effect of adaptive Snake activation, while that between CTX-vec2wav and `ab2` shows the difference made by prompt feature and modules.
 > We present the ablation studies in terms of SECS and P.Corr in Fig.\ref{fig:ablation}, together with the baselines in Section \ref{sec:en}.
 > It can be found that ***vec2wav 2.0*** obtains consistently large improvements in speaker similarity compared to the predecessor CTX-vec2wav in all the three input SSL tokens, while maintaining comparable pitch preservation.
 > From the ablation of model architectures, it is obvious that the prompt-related improvements of ***vec2wav 2.0*** make a substantial contribution to speaker similarity, while the adaptive Snake activations further advance the VC performance.
-> The proposed ***vec2wav 2.0*** with vq-wav2vec tokens is finally nearest to the top right corner of Fig.\ref{fig:ablation}, pushing the frontier of modern VC methods towards ideal voice converters.
+> The proposed ***vec2wav 2.0*** with [VQ-Wav2Vec](../Speech_Representaion/2019.10.12_VQ-Wav2Vec.md) tokens is finally nearest to the top right corner of Fig.\ref{fig:ablation}, pushing the frontier of modern VC methods towards ideal voice converters.
 
 ### Analysis of Pitch Contours: Case Study
 
